* May 27, 2009, Anthony Morphett *

Implemented autologin in the login app and Users&Groups prefs.
Added filter to hide system users & groups in Users&Groups pref.
Make login window remember more settings including per-user keymaps,
and other cosmetic fixes for the login app.

* May 22, 2009, Kristian Van Der Vliet *

Fix /dev/random. It was throwing away 24bits of each call to rand()
(rand() % 256) which seriously compromised the result to the caller.

---- 0.6.6 Released -------------------------------------------------------------------

* January 9, 2009, Kaj de Vos *

Added experimental support for installing from and to USB memory devices
to the installer and GrUB menus.

* December 27, 2008, Anthony Morphett *

Patch for p7zip to workaround double-initialization of signatures.

* December 15, 2008, Anthony Morphett *

Added 'swap left & right mousebuttons' pref to appserver; thanks to Adam.

* December 15, 2008, Kaj de Vos *

Added Russian translation of the welcome document, from Alexander "azlk".

* December 12, 2008, Kaj de Vos *

Upgraded SDL to 1.2.13 from patches by Rui Caridade.
Upgraded SDL-Image to 1.2.7, SDL-Net to 1.2.7 and SDL-Sound to 1.0.3.

* November 29, 2008, Anthony Morphett *

Modified os::Resources to internally use std::vector< ResourceDesc* >
instead of std::vector< ResourceDesc >; this bypasses the strange rescopy crash.

Removed the default parameter from MessageQueue::FindMessage() to remove
the ambiguity.

* October 24, 2008, Kristian Van Der Vliet *

Fixed a couple of stupid errors in libpthread where || (Boolean OR) had been
transposed for && (Boolean AND) causing some simple sanity checks to fail.

* October 8, 2008, Kaj de Vos *

Standardised main documentation location, from /atheos/Documentation/ and
/boot/Documentation/ on Desktop and /Documentation/ on Server, to /documentation/.
This also gets rid of the last use of the /atheos/ symlink.
Added a Documentation/ symlink in the desktop templates to /documentation/.
