@@ -1,8 +1,14 @@
 * May 27, 2009, Anthony Morphett *
 
+Made the disk partitioner fully keyboard navigable.
+
+* May 27, 2009, Anthony Morphett *
+
 Added 'Show system users/groups' checkboxes to Users&Groups prefs; added gui for autologin.
 New settings location for login app settings and autologin config; make login app save more
 settings including per-user keymaps; cosmetic fixes for dlogin.
+
+---- 0.6.6 Released -------------------------------------------------------------------
 
 * March 15, 2009, Anthony Morphett *
 
